--- a/server/lang/pt-BR.json
+++ b/server/lang/pt-BR.json
@@ -4,6 +4,12 @@
     "description": "Crie sua loja virtual na Becommerce",
     "hint": "Preencha os campos abaixo com seus dados da Becommerce para ter sua loja no celular. Caso ainda não seja cliente, contate-nos."
   },
+  "buttonApp": {
+    "label": "quero loja no app",
+  },
+  "buttonAppWeb": {
+    "label": "quero loja web e no app",
+  },
   "apiUrl": {
     "label": "URL da API da loja",
     "hint": "Insira a URL da API da loja da Becommerce",
